# rshijack

./: .travis.yml  Cargo.toml  Dockerfile  Makefile  README.md  repro-env.toml
.github/workflows/: rust.yml
contrib/: 13587.txt
contrib/shijack/: README  shijack.c
src/: args.rs  errors.rs  lib.rs  main.rs  net.rs
