[package]
name = "rshijack"
version = "0.4.0"
description = "tcp connection hijacker, rust rewrite of shijack"
authors = ["kpcyrd <git@rxv.cc>"]
license = "GPL-3.0"
repository = "https://github.com/kpcyrd/rshijack"
categories = ["command-line-utilities"]
readme = "README.md"
edition = "2018"

[badges]
travis-ci = { repository = "kpcyrd/rshijack" }

[dependencies]
anyhow = "1.0.32"
structopt = "0.3.16"
pnet = "0.27"
env_logger = "0.8"
log = "0.4"
pktparse = "0.5"
