[package]
name = "rshijack"
version = "0.5.2"
description = "TCP connection hijacker, Rust rewrite of shijack"
authors = ["kpcyrd <git@rxv.cc>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/kpcyrd/rshijack"
categories = ["command-line-utilities"]
readme = "README.md"
edition = "2021"

[dependencies]
anyhow = "1.0.32"
clap = { version = "4.1.11", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
pktparse = "0.7"
pnet = "0.35"
